<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="org.oppia.android.app.profile.AdminPinViewModel" />
  </data>

  <androidx.core.widget.NestedScrollView
    android:id="@+id/scrollViewAdminPin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/admin_auth_container"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/oppiaBackgroundYellowIvory"
      android:paddingBottom="96dp">

      <View
        android:layout_width="0dp"
        android:layout_height="6dp"
        android:background="@drawable/toolbar_drop_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <TextView
        android:id="@+id/admin_pin_main_text"
        style="@style/Subtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:text="@string/admin_pin_requirement_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <TextView
        android:id="@+id/admin_pin_warning_text"
        style="@style/Subtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:text="@string/admin_pin_pin_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_pin_main_text" />

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/admin_pin_input_pin"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/admin_pin_new_pin"
        app:errorMessage="@{viewModel.pinErrorMsg}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_pin_warning_text">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/admin_pin_input_pin_edit_text"
          style="@style/TextInputEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:imeOptions="actionNext"
          android:inputType="numberPassword"
          android:maxLength="5"
          android:text="@{viewModel.savedPin}" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/admin_pin_input_confirm_pin"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/admin_pin_new_confirm"
        app:errorMessage="@{viewModel.confirmPinErrorMsg}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_pin_input_pin">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/admin_pin_input_confirm_pin_edit_text"
          style="@style/TextInputEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:imeOptions="actionDone"
          android:inputType="numberPassword"
          android:maxLength="5"
          android:text="@{viewModel.savedConfirmPin}" />
      </com.google.android.material.textfield.TextInputLayout>

      <Button
        android:id="@+id/submit_button"
        style="@style/StateButtonActive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="28dp"
        android:background="@{viewModel.isButtonActive() ? @drawable/state_button_primary_background : @drawable/start_button_transparent_background}"
        android:clickable="@{viewModel.isButtonActive()}"
        android:enabled="@{viewModel.isButtonActive()}"
        android:minHeight="48dp"
        android:text="@string/save"
        android:textColor="@{viewModel.isButtonActive() ? @color/white : @color/submitButtonInactiveText }"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_pin_input_confirm_pin" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.core.widget.NestedScrollView>
</layout>
